updted local storage js when it didnt show previous results,  minor html changes/typos, some css for the quiz game

--- a/quiz/quiz-game/easy/index.html
+++ b/quiz/quiz-game/easy/index.html
@@ -60,6 +60,7 @@
             <div class="progress">
                 <h2>progress</h2>
             </div>
+            <div class="timer"></div>
             <div class="question-and-answer">
                 <div class="question">Lorem ipsum dolor sit amet.</div>
                 <button class="answer">Lorem, ipsum dolor.
@@ -71,9 +72,9 @@
     <footer>
         <nav class="footer-nav">
             <ul class="lalezar-regular">
-                <li><a href="/" class="active">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/memory/">Memory game</a></li>
-                <li><a href="/quiz/">Quiz</a></li>
+                <li><a href="/quiz/" class="active">Quiz</a></li>
                 <li><a href="/character/">Character creator</a></li>
             </ul>
         </nav>
