memory game update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="game-text">Memory Game</p>
             </a>
             <a class="game" href="/character/">
-                <p class="game-text">Character creating</p>
+                <p class="game-text">Character Creator</p>
             </a>
             <a class="game" href="">
                 <p class="game-text">Random</p>
