--- a/character/index.html
+++ b/character/index.html
@@ -839,10 +839,10 @@
     <footer>
       <nav class="footer-nav">
         <ul class="lalezar-regular">
-          <li><a href="/" class="active">Home</a></li>
+          <li><a href="/" >Home</a></li>
           <li><a href="/memory/">Memory game</a></li>
           <li><a href="/quiz/">Quiz</a></li>
-          <li><a href="/character/">Character creator</a></li>
+          <li><a href="/character/" class="active">Character creator</a></li>
         </ul>
       </nav>
     </footer>
