--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToolBox Home</title>
+    <title>Quiz Game</title>
+    <link rel="icon" type="images/x-icon" href="/media/icons/toolbox favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
