--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a class="game" href="/character/">
                 <p class="game-text">Character Creator</p>
             </a>
-            <a class="game" href="">
+            <a class="game" href="#" onclick="selectRandomGame()">
                 <p class="game-text">Random</p>
             </a>
         </div>
@@ -80,6 +80,13 @@
       function hideSidebar(){
         const sidebar = document.querySelector('.sidebar')
         sidebar.style.display = 'none'
+      }
+      function selectRandomGame() {
+        const gameLinks = document.querySelectorAll('.game');
+        const filteredGameLinks = Array.from(gameLinks).filter(link => link.textContent !== 'Random');
+        const randomIndex = Math.floor(Math.random() * filteredGameLinks.length);
+        const randomHref = filteredGameLinks[randomIndex].getAttribute('href');
+        window.location.href = randomHref;
       }
     </script>
   </body>
