--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <footer>
       <nav class="footer-nav">
         <ul class="lalezar-regular">
-          <li><a href="/">Home</a></li>
+          <li><a href="/" class="active">Home</a></li>
           <li><a href="/memory/">Memory game</a></li>
-          <li><a href="/quiz/" class="active">Quiz</a></li>
+          <li><a href="/quiz/">Quiz</a></li>
           <li><a href="/character/">Character creator</a></li>
         </ul>
       </nav>
